# imgui

./: app-debug.apk  app-release-unsigned.apk  nohup.out  sshx.out    .pub
.github/workflows/: build.yml  windows.yml
.idx/: dev.nix
examples/example_android_opengl3/: CMakeLists.txt  main.cpp  xhook.py
examples/example_android_opengl3/android/: build.gradle
examples/example_android_opengl3/android/app/: build.gradle  debug.keystore
examples/example_android_opengl3/android/app/src/main/cpp/: CMakeLists.txt  main.cpp  themes.cpp  themes.h
examples/example_android_opengl3/android/app/src/main/cpp/fonts/: AfacadFlux-Black.hpp  AfacadFlux-Bold.hpp  AfacadFlux-ExtraBold.hpp  AfacadFlux-ExtraLight.hpp  AfacadFlux-Light.hpp  AfacadFlux-Medium.hpp  AfacadFlux-Regular.hpp  AfacadFlux-SemiBold.hpp  AfacadFlux-Thin.hpp  LoadFontsFromEmbeddedData.hpp  Montserrat-Black.hpp  Montserrat-BlackItalic.hpp  Montserrat-Bold.hpp  Montserrat-BoldItalic.hpp  Montserrat-ExtraBold.hpp  Montserrat-ExtraBoldItalic.hpp  Montserrat-ExtraLight.hpp  Montserrat-ExtraLightItalic.hpp  Montserrat-Italic.hpp  Montserrat-Light.hpp  Montserrat-LightItalic.hpp  Montserrat-Medium.hpp  Montserrat-MediumItalic.hpp  Montserrat-Regular.hpp  Montserrat-SemiBold.hpp  Montserrat-SemiBoldItalic.hpp  Montserrat-Thin.hpp  Montserrat-ThinItalic.hpp  Oswald-Bold.hpp  Oswald-ExtraLight.hpp  Oswald-Light.hpp  Oswald-Medium.hpp  Oswald-Regular.hpp  Oswald-SemiBold.hpp  PlayfairDisplay-Black.hpp  PlayfairDisplay-BlackItalic.hpp  PlayfairDisplay-Bold.hpp  PlayfairDisplay-BoldItalic.hpp  PlayfairDisplay-ExtraBold.hpp  PlayfairDisplay-ExtraBoldItalic.hpp  (+50 more)
examples/example_android_opengl3/android/app/src/main/java/: MainActivity.kt
examples/example_glfw_opengl3/: main.cpp
examples/example_sdl3_sdlrenderer3/: Makefile
